# senior_design

./: .gitignore  .gitmodules  CODEOWNERS  Makefile  README.md  journey.bash  setup.sh  test.py
.githooks/: pre-commit  pre-push
catkin_ws/src/journey/: CMakeLists.txt  package.xml
catkin_ws/src/journey/launch/: journey.launch  journey_simulator.launch  journey_simulator_collision_training.launch
catkin_ws/src/journey/msg/: CollisionState.msg
catkin_ws/src/journey/scripts/: ddpg.py  deep_drone.py  depth_module.py  multiplicative_integration_lstm.py  trajectory_planner.py
catkin_ws/src/journey/scripts/collision_avoidance/: ddpg.py  environment.py  replay_buffer.py  simulation_randomization.py  train_obstacle_avoidance.py
catkin_ws/src/journey/scripts/depth_from_rgb/: depth_module.py
catkin_ws/src/journey/scripts/depth_from_rgb/models/: fcrn.py  network.py
catkin_ws/src/journey/scripts/nav_planner/: nav_planner.py
catkin_ws/src/journey/srv/: FlyToGoal.srv
catkin_ws/src/journey/tensorflow/models/collision_avoidance/: checkpoint  model-2105.index  model.ckpt-2359.index  model.ckpt-26.index  model.ckpt-8.index
catkin_ws/src/journey/tensorflow/models/depth_from_rgb/: NYU_FCRN.ckpt.data-00000-of-00001  NYU_FCRN.ckpt.index
catkin_ws/src/journey/urdf/: quadrotor_base.urdf.xacro  quadrotor_sensors.urdf.xacro
catkin_ws/src/journey/urdf/sensors/: generic_camera.urdf.xacro
catkin_ws/src/journey/worlds/: building.world  hallway.world  random.world  single_cylinder.world
experimental/: CODEOWNERS
experimental/alioup/: CODEOWNERS
experimental/armandb/: CODEOWNERS
experimental/jishminor/: CODEOWNERS
experimental/kirmani/depth_from_rgb_neural_net/model/: depth-net-16.index  depth-net-17.index  depth-net-18.index  depth-net-19.index
experimental/kirmani/dynamic_movement_primatives/code/: dmp.py
experimental/kirmani/dynamic_movement_primitives/: runit.sh
experimental/kirmani/dynamic_movement_primitives/writeup/: assignment1.aux  assignment1.tex
experimental/yursky/: CODEOWNERS
experimental/yursky/depth_from_rgb_neural_net/: depthnet.py  util.py
experimental/yursky/depth_from_rgb_neural_net/model/: checkpoint  depth-net-20.index
experimental/zhaopow/: CODEOWNERS
journey/: CMakeLists.txt  package.xml
journey/calibrations/: ardrone_bottom.yaml  ardrone_front.yaml
journey/include/journey/: randomize_material.h  randomizer_node.h
journey/launch/: ar_tag_tracker.launch  journey.launch  journey_eval.launch  journey_simulator.launch  simulation_randomization.launch  spawn_quadrotor.launch
journey/maps/: apt_s413.pgm  apt_s413.yaml
journey/scripts/collision_avoidance/: ddpg.py  model_evaluator.py  simulation_randomization.py  train_obstacle_avoidance.py
journey/scripts/nav_planner/: nav_planner.py
journey/scripts/tag_tracker/: tag_tracker.py
journey/src/: randomize_light.cpp  randomize_material.cpp  randomizer_node.cpp  randomizer_tools.cpp
journey/tensorflow/models/collision_avoidance/continuous/: events.out.tfevents.1515224826.tensorbox  model.ckpt-51.index
journey/tensorflow/models/collision_avoidance/discrete/: events.out.tfevents.1518506863.tensorbox  events.out.tfevents.1520121691.tensorbox  model.ckpt-999.index
journey/urdf/: quadrotor_base.urdf.xacro
journey/worlds/: apt_s413.world  hallway2.world  hallway3.world  seans_apartment
launch/: journey_simulator_collision_training.launch
navigation/: CODEOWNERS
papers/: CODEOWNERS
scripts/: setup.sh
scripts/collision_avoidance/: multiplicative_integration_lstm.py
worlds/: building.world  single_cylinder_in_building.world
(+2 files in other folders)
