<?xml version="1.0"?>
<package>
  <name>journey</name>
  <version>0.0.0</version>
  <description>The journey package</description>

  <maintainer email="sean@kirmani.io">kirmani</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>ros_numpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_dev</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>ros_numpy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>gazebo_dev</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
